# nano-opencode

./: .env.example  .gitignore  .lintstagedrc  .prettierignore  AGENT.md  CHANGELOG.md  CODE-REVIEW.md  COMPLETION-CERTIFICATE.md  CONTRIBUTING.md  DELIVERY-SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  MERGE-SUMMARY.md  METRICS.md  NANO.md  PUBLISHING.md  README.md  ROADMAP.md  TEST-REPORT.md  commitlint.config.js  eslint.config.js  nano.py  nano.ts  package-lock.json  package.json  pnpm-lock.yaml  readiness.json  swe_bench_hard.py  swe_bench_mini.py
.claude/: ralph-loop.local.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent-readiness/: AGENTS.md  CONTRIBUTING.md  FACTORY_COMPARISON.md  README.md  docker-compose.yml  package-lock.json  package.json
agent-ready/: .gitignore  CONTRIBUTING.md  FACTORY_COMPARISON.md  eslint.config.js  package-lock.json  package.json
docs/: TUI_COMPARISON.md  ZAI_PERFORMANCE_REPORT.md
implementations/: .gitignore  AGENT_COMPARISON_REPORT.md  ALL_RESULTS.md  COMPARISON.md  COMPREHENSIVE_REPORT.md  FINAL_BENCHMARK_REPORT.md  PERFORMANCE_REPORT.md  SWEBENCH_RESULTS.md  agent_comparison.py  anthropic__claude-sonnet-4-20250514.nano_eval.json  anthropic__claude-sonnet-4-20250514.nano_official_9.json  anthropic__claude-sonnet-4-20250514.nano_test.json  benchmark.py  benchmark_all_languages.py  benchmark_data.json  evaluate.sh  language_benchmark.py  nano-expert.expert.json  swe_agent_compare.py  (+4 more)
implementations/rust/: Cargo.toml  README.md
implementations/rust/.cargo/: config.toml
implementations/rust/src/: main.rs
(+360 files in other folders)
