[package]
name = "nano-opencode"
version = "0.1.0"
edition = "2021"
description = "Minimal AI coding agent in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
